[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "myco"
dynamic = ["version"]
description = "Agent-First symbiotic cognitive substrate. 20 fungal-named verbs (19 agent + 1 human-facing `brief`), 47-dimension immune across 7 subsystems, substrate-local plugins via .myco/plugins/, editable-by-default install, universal MCP stdio + streamable-http server with OAuth 2.1, schema v3 canon."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Yanjun" },
]
keywords = [
  "agent",
  "substrate",
  "knowledge-management",
  "mcp",
  "model-context-protocol",
  "mycelium",
  "cognitive",
  "agent-first",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/Battam1111/Myco"
Repository = "https://github.com/Battam1111/Myco"
Documentation = "https://github.com/Battam1111/Myco/tree/main/.docs"
Changelog = "https://github.com/Battam1111/Myco/blob/main/.docs/contract_changelog.md"
"Bug Tracker" = "https://github.com/Battam1111/Myco/issues"

[project.optional-dependencies]
# ``pip install 'myco[mcp]'`` — pulls in the Model Context Protocol SDK
# so ``python -m myco.boundary.mcp`` (and any other MCP adapter) has what it needs.
# Floor of 1.2 covers the FastMCP.run() entry point used by the launcher;
# the low-level Server API has been stable across the entire 1.x line.
mcp = [
  "mcp>=1.2",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  # v0.6.0 §K.4: parallel test execution. ``--dist loadfile`` keeps
  # conftest fixture state intact across worker boundaries.
  "pytest-xdist>=3.5",
  # v0.5.7: pin the type-stub floor so `mypy src/myco` runs clean on a
  # fresh `pip install -e ".[dev]"` without an extra "missing stubs"
  # round. types-PyYAML provides the stubs mypy asks for when it sees
  # our ``import yaml`` / ``yaml.safe_load`` calls.
  "types-PyYAML>=6.0",
  # Linter + formatter for the baseline encoded in [tool.ruff] below.
  # Floor pegged at the ruff that introduced --unsafe-fixes stabilized
  # semantics so CI rules do not drift as ruff releases roll forward.
  "ruff>=0.5",
  # Static type checker for the baseline in [tool.mypy] below. Any
  # 1.x release works; we pin the floor so CI's mypy is predictable.
  "mypy>=1.8",
]
# v0.6.0 §B.2 / §A6: OAuth 2.1 + PKCE + RFC 8707 streamable-http stack.
# python-jose retained per owner amendment §A6.
mcp-auth = [
  "python-jose>=3.5",
  "authlib>=1.3",
  "cryptography>=42",
]
# v0.8.6 — the `mcp-resources` extra was excreted alongside the
# v0.8.5 `boundary/surface/mcp_resources` excretion (a stub
# subscription surface that production code never wired up).
# `watchfiles` is no longer a Myco dependency; downstream substrates
# that need filesystem watching install it directly.
# v0.8.8 max-aggressive: [adapters], [examples], [multimedia] extras
# excreted alongside their adapter modules (chat_log, email_mbox,
# git_history, sqlite, video_frames, web_cluster, multimedia_cluster)
# and the .docs/examples/ framework-demo subtree. Downstream substrates
# that need PDF/HTML/URL/multimedia/sqlite ingest re-add via
# .myco/plugins/adapters/.

[project.scripts]
# Three stable PATH-level entry points so `.mcp.json` and hook configs
# never have to reason about the user's venv or whether `python` vs
# `python3` is the right alias.
#
#   myco              the manifest-driven CLI (20 verbs since v0.6.0:
#                     19 agent + 1 human-facing `brief`).
#   mcp-server-myco   the MCP stdio/sse launcher; follows the
#                     community `mcp-server-<name>` convention so
#                     tools like uvx, pipx, and the MCP Registry
#                     can pick it up without configuration.
#   myco-install      zero-copy-paste install into any of ten MCP
#                       hosts (Claude Code, Claude Desktop, Cursor,
#                       Windsurf, Zed, VS Code, OpenClaw, Gemini CLI,
#                       Codex CLI, Goose). Writes the correct schema
#                       per host (JSON / TOML / YAML); idempotent.
myco = "myco.boundary.surface.cli:main"
mcp-server-myco = "myco.boundary.mcp:main"
myco-install = "myco.boundary.install:main"

# v0.5 (MAJOR 6) — dimension registration via entry-points.
#
# Myco's own built-in dimensions register here, the same way a third-
# party substrate plugin would. `default_registry()` discovers this
# table at runtime via `importlib.metadata.entry_points(group=
# "myco.dimensions")`. Adding a dimension means: write the class, add
# a row here, run `pip install -e .` (installed users get it
# automatically on next `pip install`). No edit to
# `src/myco/homeostasis/dimensions/__init__.py`'s `_BUILT_IN` tuple is
# strictly required after v0.5 — the tuple is the dev-checkout
# fallback, not the SSoT.
#
# Third-party dimension packages follow the same shape:
#
#   [project.entry-points."myco.dimensions"]
#   my_id = "mypkg.lint:MyDimensionClass"
[project.entry-points."myco.dimensions"]
M1 = "myco.homeostasis.dimensions.mechanical.m_cluster:M1CanonIdentityFields"
M2 = "myco.homeostasis.dimensions.mechanical.m_cluster:M2EntryPointExists"
M3 = "myco.homeostasis.dimensions.mechanical.m_cluster:M3WriteSurfaceDeclared"
MF1 = "myco.homeostasis.dimensions.mechanical.mf_cluster:MF1DeclaredSubsystemsExist"
MF2 = "myco.homeostasis.dimensions.mechanical.mf_cluster:MF2SubstrateLocalPluginHealth"
MP1 = "myco.homeostasis.dimensions.mechanical.mp_cluster:MP1NoProviderImports"
SH1 = "myco.homeostasis.dimensions.shipped.sh_cluster:SH1PackageVersionRef"
MB1 = "myco.homeostasis.dimensions.metabolic.mb_cluster:MB1RawNotesBacklog"
MB2 = "myco.homeostasis.dimensions.metabolic.mb_cluster:MB2NoIntegratedYet"
SE1 = "myco.homeostasis.dimensions.semantic.se_cluster:SE1DanglingRefs"
SE2 = "myco.homeostasis.dimensions.semantic.se_cluster:SE2OrphanIntegrated"
# v0.5.8 additions (Phase 14 of the v0.5.8 cleanup):
MP2 = "myco.homeostasis.dimensions.mechanical.mp_cluster:MP2PluginProviderImports"
DC1 = "myco.homeostasis.dimensions.mechanical.dc_cluster:DC1ModuleDocstring"
DC2 = "myco.homeostasis.dimensions.mechanical.dc_cluster:DC2PublicFunctionDocstring"
DC3 = "myco.homeostasis.dimensions.mechanical.dc_cluster:DC3PublicClassDocstring"
DC4 = "myco.homeostasis.dimensions.mechanical.dc_cluster:DC4ModuleDocRef"
CS1 = "myco.homeostasis.dimensions.mechanical.singletons_cluster:CS1ContractVersionSync"
RL1 = "myco.homeostasis.dimensions.semantic.rl1_rules_referenced:RL1RulesReferenced"
FR1 = "myco.homeostasis.dimensions.mechanical.singletons_cluster:FR1FreshSubstrateInvariants"
PA1 = "myco.homeostasis.dimensions.mechanical.pa_cluster:PA1WriteSurfaceCoverage"
SE3 = "myco.homeostasis.dimensions.semantic.se_cluster:SE3LinkSelfCycle"
MB3 = "myco.homeostasis.dimensions.metabolic.mb_cluster:MB3RawNotesHighWatermark"
CG1 = "myco.homeostasis.dimensions.mechanical.cg_cluster:CG1DoctrineHasSrcReference"
CG2 = "myco.homeostasis.dimensions.mechanical.cg_cluster:CG2SubpackageHasDoctrineLink"
DI1 = "myco.homeostasis.dimensions.mechanical.di_cluster:DI1DisciplineHooksPresent"
# v0.6.0 additions (21 new dims; severity-promotion ledger applies via _canon.yaml::lint.severity_promotion):
PA2 = "myco.homeostasis.dimensions.mechanical.pa_cluster:PA2MegafileLocCap"
PA3 = "myco.homeostasis.dimensions.mechanical.pa_cluster:PA3SurfacePureAdapter"
PA4 = "myco.homeostasis.dimensions.mechanical.pa_cluster:PA4CoreNoSubsystemDeps"
PA5 = "myco.homeostasis.dimensions.mechanical.pa_cluster:PA5MetaSubsystemLayering"
SC1 = "myco.homeostasis.dimensions.mechanical.singletons_cluster:SC1SchemaParity"
DC5 = "myco.homeostasis.dimensions.mechanical.dc_cluster:DC5AbstractParentAllowlist"
DI2 = "myco.homeostasis.dimensions.mechanical.di_cluster:DI2DisciplineHooksContent"
AD1 = "myco.homeostasis.dimensions.mechanical.singletons_cluster:AD1AdapterSilentSkip"
# v0.8.6 — SE4/RL2/RL3 excreted (永恒删减; never-fire dead-letter dims).
MB4 = "myco.homeostasis.dimensions.metabolic.mb_cluster:MB4SporulatedReabsorbed"
MB6 = "myco.homeostasis.dimensions.metabolic.mb_cluster:MB6StaleDraftOrDistilled"
SH2 = "myco.homeostasis.dimensions.shipped.sh_cluster:SH2KernelAheadOfCanon"
CL1 = "myco.homeostasis.dimensions.mechanical.cl_cluster:CL1SamplingPolicyGate"
MP3 = "myco.homeostasis.dimensions.mechanical.mp_cluster:MP3PluginBytecodeAudit"
CL2 = "myco.homeostasis.dimensions.mechanical.cl_cluster:CL2OAuthTokenResidency"
CL3 = "myco.homeostasis.dimensions.mechanical.cl_cluster:CL3SamplingTokenClear"
MF4 = "myco.homeostasis.dimensions.mechanical.mf_cluster:MF4OverlaySubsystemValidity"
# v0.7.2 additions (4 new dims for 永恒删减 / eternal-pruning ratchet):
MB8 = "myco.homeostasis.dimensions.metabolic.mb_cluster:MB8ShimHitCounter"
PA6 = "myco.homeostasis.dimensions.mechanical.pa_cluster:PA6RepoBloat"
MF5 = "myco.homeostasis.dimensions.mechanical.mf_cluster:MF5GeneratedMirrorIntegrity"
SE5 = "myco.homeostasis.dimensions.semantic.se_cluster:SE5VersionAnchorFreshness"
# v0.7.5 additions (1 new dim — L0 Living Bets cadence enforcement):
LB1 = "myco.homeostasis.dimensions.semantic.lb_cluster:LB1LivingBetsOverdue"
# v0.8.0 addition (1 new dim — L0 Living Bets two-regime axis check):
LB2 = "myco.homeostasis.dimensions.semantic.lb_cluster:LB2LivingBetsRegime"

[tool.hatch.version]
# Single source of truth for the package version — per L1 versioning.md.
path = "src/myco/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/myco"]

[tool.hatch.build.targets.sdist]
# v0.8.4 root-cleanup (2026-05-12): 3 content directories (tests/,
# docs/, scripts/) moved to dot-prefixed hidden form (.tests/, .docs/,
# .scripts/) so the repo root carries: LICENSE / README.md /
# pyproject.toml + src/ + 14 hidden entries. src/ stays visible
# because an editable install can't be reinstalled while
# `mcp-server-myco.exe` is in use; the user's Claude Desktop session
# locks the binary. src/ relocation is a separate craft if the user
# wants the absolute minimum (3 files, 0 visible folders).
include = [
  "/src",
  "/.tests",
  "/.docs",
  "/.scripts",
  "/.plugin",
  "/.claude-plugin",
  "/.claude",
  "/.github",
  "/.docker",
  "/.meta",
  # v0.8.6 fix: include the canon-tree skeleton (.myco/canon.yaml +
  # .myco/canon_lint.yaml + .myco/MYCO.md) in the sdist so downstream
  # users installing from sdist receive the canon templates. Previously
  # the canon-tree was silently absent from sdist builds; only `pip
  # install -e .` clones via git picked it up. The `state/` runtime
  # tree is excluded below.
  "/.myco",
  "/.mcp.json",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]
# v0.8.4 root-cleanup (2026-05-12): collapsed several explicit root
# entries into broader globs after structural moves:
#   - README_zh.md + README_ja.md → docs/i18n/   (covered by /docs)
#   - CONTRIBUTING.md + CODE_OF_CONDUCT.md + SECURITY.md +
#     CITATION.cff → .github/                   (covered by /.github)
#   - assets/ → docs/assets/                     (covered by /docs)
#   - examples/ → docs/examples/                 (covered by /docs)
#   - agents/ + commands/ + hooks/ + skills/    → plugin/{...}/
# `/docs/INSTALL.md` removed (redundant: /docs already covers it).
# `/plugin` added so the v0.8.4 plugin-bundle parent ships in sdist.
exclude = [
  "/.release_notes_*.md",
  "/upload*.log",
  "/dist",
  "/build",
  "/.pytest_cache",
  "/.venv",
  "**/__pycache__",
  # v0.8.6 — exclude the runtime-state tree from sdist; only the
  # canon SoT (canon.yaml + canon_lint.yaml + MYCO.md + notes/) needs
  # to ship. .myco/state/ is per-installation derivative.
  "/.myco/state/**",
]

[tool.pytest.ini_options]
# v0.8.4 root-cleanup (2026-05-12): tests/ and src/ relocated to
# hidden .tests/ and src/ for root minimalism.
testpaths = [".tests"]
# v0.6.0 §K.3 / §K.4: enable coverage gate + xdist parallel by default.
# CI runs --cov-report=xml + per-package floors via .scripts/coverage_floors.py.
# v0.8.8 — added ``--import-mode=importlib`` (PEP 420 namespace
# packages). Removed 38 empty / docstring-only ``__init__.py`` files
# from ``.tests/`` since Python 3.3+ does not require them, and the
# pytest-recommended ``importlib`` mode handles namespace packages
# correctly — including the common "same test-file basename across
# different test directories" case (e.g. ``test_registry.py`` exists
# under both ``.tests/unit/core/`` and ``.tests/unit/homeostasis/``;
# the old ``prepend`` mode collapsed those by basename, blowing up
# collection). See:
# https://docs.pytest.org/en/stable/explanation/pythonpath.html#import-modes
addopts = "-ra --strict-markers --strict-config --import-mode=importlib"
pythonpath = ["src"]
# v0.8.4 root-cleanup (2026-05-12): redirect pytest cache from
# default `.pytest_cache/` (visible root dotdir) to `.cache/pytest/`
# under a single consolidated cache parent. .mypy_cache + .ruff_cache
# are similarly redirected via their own tool sections below.
cache_dir = ".cache/pytest"
# v0.7.6 (graph-builder benchmark suite): the ``benchmark`` marker
# tags the slow scale tests under ``tests/benchmark/`` so a normal
# ``pytest`` run can exclude them via ``-m "not benchmark"`` and a
# scheduled run can target them via ``-m benchmark``. The tests also
# self-skip unless ``MYCO_RUN_BENCHMARKS=1`` is set, so omitting the
# ``-m`` flag is safe — the env-var gate is the primary defence;
# the marker is a registered alias for the same set.
markers = []

[tool.coverage.run]
# v0.6.0 §K.3 — coverage configuration introduced.
# v0.8.4 root-cleanup (2026-05-12): src/ moved to src/.
source = ["src/myco"]
branch = true
omit = [
  # boundary symbionts have OS-conditional code paths covered only on
  # the matching CI matrix cell; per-package floor (60%) compensates.
  "*/symbionts/*",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

# -----------------------------------------------------------------------------
# v0.5.7 — Tool baselines (locked for CI consumption)
# -----------------------------------------------------------------------------

[tool.mypy]
# The v0.5.7 baseline is deliberately permissive: we opt in to the two
# hygiene flags (unused ignores, redundant casts) without forcing
# strict-mode over the whole repo. That lets us fix real type drift
# incrementally without blocking small PRs on an explosion of Any leaks.
# The CI workflow runs `mypy src/myco` only (not tests/) — tests import
# via fixtures that would need extensive stub work.
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = false
show_error_codes = true
# Modules without third-party stubs: don't crash, just log.
ignore_missing_imports = true
# v0.8.4 root-cleanup (2026-05-12): redirect mypy cache from default
# `.mypy_cache/` to consolidated `.cache/mypy/`.
cache_dir = ".cache/mypy"
# v0.6.0 §K.4: extend mypy to tests/ with disallow_untyped_defs=false
# (test fixtures may stay untyped); ratchets toward stricter typing
# over v0.6.x via mypy_tests_baseline.txt.

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
ignore_errors = true  # initial baseline; tighten over v0.6.x

[tool.ruff]
target-version = "py310"
line-length = 88
# v0.8.4 root-cleanup (2026-05-12): src/ + tests/ moved to src/ + .tests/.
src = ["src", ".tests"]
# v0.8.4 root-cleanup (2026-05-12): redirect ruff cache from default
# `.ruff_cache/` to consolidated `.cache/ruff/`.
cache-dir = ".cache/ruff"
# Exclude runtime caches so ruff doesn't report on files we
# intentionally do not maintain.
exclude = [
  ".myco/state",
  ".venv",
  "dist",
  "build",
]

[tool.ruff.lint]
# Conservative but non-trivial selection: errors + pycodestyle
# warnings + import discipline + modernization + common security
# + common correctness + common simplification. S (bandit) is kept
# out of the default because `assert` use in tests would flood
# findings; tests opt in via per-file-ignores below if needed.
select = [
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "F",     # pyflakes
  "I",     # isort (import ordering)
  "B",     # flake8-bugbear
  "UP",    # pyupgrade (3.10+ idioms)
  "SIM",   # flake8-simplify
  "C4",    # flake8-comprehensions
  "RUF",   # ruff-specific
]
# RUF001 (ambiguous unicode) fires on legitimate typographic dashes in
# changelog templates; RUF022 (unsorted __all__) is low-value churn;
# E501 line-too-long is covered informally by `ruff format`. Line
# length enforcement happens through the formatter, not the linter.
ignore = [
  "E501",
  "RUF001",
  "RUF022",
  "RUF043",  # pytest.raises ambiguous pattern — low-signal
  "SIM105",  # contextlib.suppress rewrite — cosmetic
  "SIM108",  # if-else vs if-exp — cosmetic
  "SIM110",  # any() rewrite — cosmetic
  "SIM117",  # combined with statements — cosmetic on test I/O contexts
  "B904",    # raise from — cosmetic on already-intentional patterns
]

[tool.ruff.lint.per-file-ignores]
# Test files are allowed to use asserts and may skip some stylistic
# rules that make sense only in production code.
".tests/**" = ["B017"]
# Generated / template strings in the ramify scaffolder include
# example code that intentionally uses old-style typing etc.
"src/myco/cycle/ramify.py" = ["UP035"]

[tool.ruff.format]
# Ruff's formatter is stable enough to be our canonical formatter.
# Running `ruff format` produces deterministic output identical to
# `black` on the vast majority of cases (double-quoted strings,
# trailing commas in multi-line collections, etc.). Declaring it here
# pins the convention so contributor diffs don't churn on formatter
# version drift.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
