[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myco-kernel-governance"
version = "0.9.0a1"
description = "Myco v0.9 — kernel/governance: classifier + attestation envelope + lifecycle FSM + owner_keys + federation + rollback (L1_GOVERNANCE §1-§6)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "Yanjun" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "blake3>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"

[tool.mypy]
strict = true
python_version = "3.10"
files = "src/myco_kernel_governance"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "S", "RUF"]
ignore = [
    "S101",  # assert in tests is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]
