[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myco-kernel-trajectory"
version = "0.9.0a1"
description = "Myco v0.9 — kernel/trajectory: cluster_C + trajectory queries (L1_TRAJECTORY)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Yanjun" }]
dependencies = ["myco-kernel-governance"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "mypy>=1.10", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"
